--- a/homework_6/homework_6_additional/style.css
+++ b/homework_6/homework_6_additional/style.css
@@ -17,16 +17,17 @@ header{
 }
 main {
     display: flex;
-    width: 100%;
     height: 70%;
 }
 main section:first-child{
     width: 70%;
-    flex-direction: column;
     height: 100%;
+    flex-direction: column;
 }
+
 main section:last-child{
     width: 30%;
+    height: 100%;
 }
 section article:first-child, section article:last-child{
     display: flex;
@@ -63,4 +64,9 @@ main section:last-child div{
     width: 100%;
     height: 100%;
     background-color: #d0d0d0;
+}
+main section:first-child div{
+    width: 100%;
+    height: 100%;
+
 }
