--- a/homework_6/homework_6_additional/style.css
+++ b/homework_6/homework_6_additional/style.css
@@ -1,72 +1,44 @@
-.main_style{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 body{
     margin: 0;
 }
-.wrapper{
-    width: 100vw;
-    height: 100vh;
-}
-header{
-    width: 100%;
-    height: 30%;
-    background-color: #7b6e6e;
-}
-main {
-    display: flex;
-    height: 70%;
-}
-main section:first-child{
-    width: 70%;
-    height: 100%;
-    flex-direction: column;
-}
-
-main section:last-child{
-    width: 30%;
-    height: 100%;
-}
-section article:first-child, section article:last-child{
-    display: flex;
-}
-.first_part div:first-child{
-     background-color: #cac7c7;
- }
-.first_part div:nth-child(2){
-    background-color: #948181;
-}
-.first_part div:last-child{
-    background-color: #7f6a6a;
-}
-.second_part div:first-child{
-    background-color: #d1b4b4;
-}
-.second_part div:nth-child(2){
-    background-color: #e3e3e3;
-}
-.second_part div:last-child{
-    background-color: #f1b9b9;
-}
-.first_part,.second_part{
-    height: 50%;
-    width: 100%;
-}
-.first_part div,.second_part div{
+.style_main{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
 }
-main section:last-child div{
-    width: 100%;
-    height: 100%;
-    background-color: #d0d0d0;
+header{
+    width: 100vw;
+    height: 30vh;
+    box-sizing: border-box;
+    border: 10px solid #c7c7c7;
+    background-color: #e8e8e8;
 }
-main section:first-child div{
+main{
+    display: flex;
+}
+.left_side_bar{
+    width: 70vw;
+    height: 70vh;
+}
+.first_row,.second_row{
+    display: flex;
     width: 100%;
+    height: 50%;
+}
+.first_row div,.second_row div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    width: 33.34vw;
     height: 100%;
-
+    border: 10px solid #c7c7c7;
+    background-color: #e8e8e8;
+}
+.right_side_bar{
+    box-sizing: border-box;
+    border: 10px solid #c7c7c7;
+    background-color: #e8e8e8;
+    width: 30vw;
+    height: 70vh;
 }
