--- a/project/style.css
+++ b/project/style.css
@@ -245,6 +245,7 @@ main section:last-child{
     display: flex;
     flex-direction: column;
 
+    height: 800px;
     width: 100%;
     padding: 100px 450px 0 450px;
     box-sizing: border-box;
@@ -271,8 +272,57 @@ main section:last-child{
     justify-content: space-between;
 
 }
+.section_images{
+    margin-top: 30px;
+    display: flex;
+    width: 100%;
+}
+.section_images img{
+    width: 50%;
+}
+.section_images div{
+    border-radius: 0 8px 8px 0;
+    width: 50%;
+    height: 100%;
+    background-color: #1A1A1A;
+    box-sizing: border-box;
 
-/*---------------------------------------MAIN_section_2---------------------------------------*/
+    padding-left: 35px;
 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.section_images div img{
+    width: 220px;
+}
+.section_images div p:nth-child(2){
+    font-family: 'Raleway', sans-serif;
+    margin: 15px 0;
+}
+.section_images div p:last-child{
+    font-family: 'Raleway', sans-serif;
+    color: #A962FF;
+}
+.section_bottom_images{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 15px;
+    border-radius: 10px;
+    width: 100%;
+    height: 55px;
+    background-color: #261F264D;
+}
+/*---------------------------------------MAIN_section_3---------------------------------------*/
 
 /*---------------------------------------MAIN---------------------------------------*/
+
+/*---------------------------------------FOOTER---------------------------------------*/
+footer{
+    color: white;
+}
+
+
+
+/*---------------------------------------FOOTER---------------------------------------*/
